author credit added
add uri and author badge to calendar css

--- a/style.css
+++ b/style.css
@@ -179,7 +179,8 @@ form.upform input[type=submit] {
   text-align: right;
 }
 
-/* calendar styles */
+/* calendar styles
+ @Xu Ding https://www.startutorial.com/articles/view/how-to-build-a-web-calendar-in-php */
 div#calendar{
   margin: 30px 70px;
   padding:0px;
@@ -217,7 +218,6 @@ div#calendar div.header span.title{
     color:#FFF;
     font-size:18px;
 }
-
 div#calendar div.header a.prev{
     left:0px;
 }
@@ -241,7 +241,7 @@ div#calendar ul.label li{
     margin-right:5px;
     float:left;
     list-style-type:none;
-    width:60px;
+    width:80px;
     height:40px;
     line-height:40px;
     vertical-align:middle;
@@ -250,7 +250,6 @@ div#calendar ul.label li{
     font-size: 15px;
     background-color: transparent;
 }
-
 div#calendar ul.dates{
     float:left;
     margin: 0px;
@@ -268,8 +267,8 @@ div#calendar ul.dates li{
     vertical-align:middle;
     float:left;
     list-style-type:none;
-    width:60px;
-    height:60px;
+    width:80px;
+    height:80px;
     font-size:25px;
     background-color: #DDD;
     color:#000;
